# enum-invocable

./: .travis.yml  CMakeLists.txt  README.md
include/invocation_binder/: invocation_binder.h  invocation_binder.hpp
tests/: CMakeLists.txt  invocation_binder_test.cc  invocation_binder_test.cpp
